packages/typ/tests/fixtures/diagnostics/0890_gadt_pair_constructor_payload_mismatch_03.ml.expected
File "0890_gadt_pair_constructor_payload_mismatch_03.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0890_gadt_pair_constructor_payload_mismatch_03 is not a valid module name.

File "0890_gadt_pair_constructor_payload_mismatch_03.ml", line 5, characters 50-54:
5 | let _ : (int * bool) pair_box_gamma = Pair_gamma (true, 2)
                                                      ^^^^
Error: This expression should not be a boolean literal, the expected type is
       int
